<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black"
    android:padding="20sp">

    <TextView
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/_0"
        android:textStyle="bold"
        android:textSize="60sp"
        android:textColor="#FFFFFF"
        android:paddingHorizontal="15dp"
        android:paddingVertical="35sp" />
<!--                  num pad                     -->
    <LinearLayout
        android:id="@+id/nums"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:gravity="bottom"
        >
        <!--                  column 1 (from left)             -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom"
            android:baselineAligned="false"
            android:orientation="vertical">


            <Button
                style="@style/button1"
                android:id="@+id/on"
                android:text="@string/on"
                />

            <Button
                style="@style/button2"
                android:text="@string/_7"
                android:id="@+id/num7"
                />

            <Button style="@style/button2"
                android:text="@string/_4"
                android:id="@+id/num4"/>

            <Button
                style="@style/button2"
                android:text="@string/_1"
                android:id="@+id/num1"
                />

            <Button
                style="@style/button1"
                android:text="@string/del"
                android:id="@+id/del"
                />
        </LinearLayout>
        <!--                  column 2 (from left)              -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/off"
                style="@style/button1"
                android:text="@string/off" />

            <Button
                android:id="@+id/num8"
                style="@style/button2"
                android:text="@string/_8"
                android:visibility="visible"
                tools:visibility="visible" />

            <Button style="@style/button2"
                android:id="@+id/num5"
                android:text="@string/_5"
                />

            <Button style="@style/button2"
                android:id="@+id/num2"
                android:text="@string/_2"
                />

            <Button style="@style/button2"
                android:id="@+id/num0"
                android:text="@string/_0"
                />
        </LinearLayout>
        <!--                  column 3 (from left)              -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:gravity="bottom"
            android:orientation="vertical">


            <Button style="@style/button1"
                android:id="@+id/AC"
                android:text="@string/ac"
                />

            <Button style="@style/button2"
                android:id="@+id/num9"
                android:text="@string/_9"
                />

            <Button style="@style/button2"
                android:id="@+id/num6"
                android:text="@string/_6"
                />

            <Button style="@style/button2"
                android:id="@+id/num3"
                android:text="@string/_3"
                />

            <Button style="@style/button2"
                android:id="@+id/decipoint"
                android:text="@string/deci"
                />
        </LinearLayout>
        <!--                  column 4 (from left)              -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom"
            android:baselineAligned="false"
            android:orientation="vertical">


            <Button
                style="@style/button1"
                android:text="@string/div"
                android:id="@+id/div"/>

            <Button style="@style/button1"
                android:text="@string/mul"
                android:id="@+id/mul"
                />

            <Button style="@style/button1"
                android:text="@string/minus"
                android:id="@+id/minus"
                />

            <Button style="@style/button1"
                android:text="@string/plus"
                android:id="@+id/add"
                />

            <Button style="@style/button1"
                android:text="@string/equal"
                android:id="@+id/equal"
                />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>